apps/security/tenant-guardrails/manifests/deny-wildcard-role-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyWildcardRole
metadata:
  name: tenant-deny-wildcard-role
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["Role"]
    namespaceSelector:
      matchExpressions:
        - key: teams.example.com/team-id
          operator: Exists
